--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     <p>
     Created by RAY
     </p>
+    <hr>
+    <a href='about.html'>About Us</a>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
