--- a/play_2.html
+++ b/play_2.html
@@ -52,7 +52,7 @@
             </li>
         </ul>
         <hr>
-        <p>If you understand this, click<a href='index.html'> here</a>.</p>
-        <p>If you still still don't understand this, click<a href='https://sites.google.com/view/billlemons/home-page'> here</a>.</p>
+        <p>If you understand this game, click <a href='index.html'>here</a>.</p>
+        <p>If you still still don't understand this game, click <a href='https://sites.google.com/view/billlemons/home-page'>here</a>.</p>
     </body>
 </html>
