--- a/play_2.html
+++ b/play_2.html
@@ -16,7 +16,7 @@
         <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
     </head>
     <body>
-        <h1>How to Play 2048 (Detailed explanation)</h1>
+        <h1>How to Play 2048 (Detailed)</h1>
         <h2>1.Game Setup</h2>
         <ul>
             <li>The game is played on a 4x4 grid.</li>
